--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -7,16 +7,10 @@ single: true
 {% unless page.sharing == false %}
 	{% include post/sharing.html %}
 {% endunless %}
-{% if site.disqus_short_name and page.comments == true %}
-<section id="comment">
-    <h1 class="title">Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
-</section>
-{% endif %}
 
-{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
-  <section>
-    <h1>Comments</h1>
-    <div id="comments" aria-live="polite">｛% include post/duoshuo1.html %｝</div>
-  </section>
+{% if site.duoshuo_show_comment_count==true %}
+<section imagesd="comment">
+<h1>Add a comment</h1>
+{% include post/duoshuo.html %}
+</section>
 {% endif %}
